<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPrompt"
            android:textSize="@dimen/activity_text"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editStock"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="textCapCharacters"
            android:minWidth="@dimen/smallgap" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textPrompt"
            android:id="@+id/textSymbol"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd"
            android:gravity="right" />
        <TextView android:text="@string/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textPrompt"
            android:id="@+id/textSymbol2"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textSymbol"
            android:id="@+id/textName"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd"
            android:gravity="right" />
        <TextView android:text="@string/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textSymbol"
            android:id="@+id/textName2"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textName"
            android:id="@+id/textLastPrice"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd"
            android:gravity="right" />
        <TextView android:text="@string/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textName"
            android:id="@+id/textLastPrice2"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLastPrice"
            android:id="@+id/textLastTime"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd"
            android:gravity="right" />
        <TextView android:text="@string/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLastPrice"
            android:id="@+id/textLastTime2"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLastTime"
            android:id="@+id/textChange"
            android:textSize="@dimen/activity_text"
            android:textAlignment="gravity"
            android:gravity="right" />
        <TextView android:text="@string/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLastTime"
            android:id="@+id/textChange2"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textChange"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textRange"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd"
            android:gravity="right" />
        <TextView android:text="@string/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textChange"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textRange2"
            android:textSize="@dimen/activity_text"
            android:textAlignment="viewEnd"  />
    </TableRow>
</TableLayout>
